# RITnet

./: CMakeLists.txt  Makefile  README.md  dataset.py  densenet.py  dv_draw_ellipse.py  dv_visualisation.py  native_eye_track.yaml  opt.py  plugin.cpp  ritnet.pt  test.py  utils.py
